--- a/CloudService/CloudService/Base.lproj/Main.storyboard
+++ b/CloudService/CloudService/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="moG-sH-JKE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15A2301" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="moG-sH-JKE">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -685,16 +685,43 @@
                     <connections>
                         <outlet property="pageView" destination="2fE-ZY-gNK" id="xcD-0b-61R"/>
                         <segue destination="nWe-z1-RRx" kind="push" identifier="searchOrder" id="YSw-6b-qmW"/>
+                        <segue destination="g2Q-wk-WsR" kind="push" identifier="orderInfo" id="MPx-U3-8mP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DF7-Ey-5Os" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1278.5" y="-292.5"/>
         </scene>
-        <!--Search Order View Controller-->
+        <!--订单详情-->
+        <scene sceneID="f1q-sT-j2A">
+            <objects>
+                <viewController id="g2Q-wk-WsR" userLabel="订单详情" customClass="OrderInfoViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="162-fj-YLk"/>
+                        <viewControllerLayoutGuide type="bottom" id="ekn-Cz-oJx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kZt-g7-42U">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hdz-gv-gX6">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="270"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="BMd-Tn-D6W"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FjV-52-9y1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1802.5" y="86.5"/>
+        </scene>
+        <!--搜索订单-->
         <scene sceneID="yOl-CL-eyO">
             <objects>
-                <viewController id="nWe-z1-RRx" customClass="SearchOrderViewController" sceneMemberID="viewController">
+                <viewController id="nWe-z1-RRx" userLabel="搜索订单" customClass="SearchOrderViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3iX-gp-FqW"/>
                         <viewControllerLayoutGuide type="bottom" id="ZwC-cg-R5e"/>
@@ -709,7 +736,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5iS-I2-iuC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1864.5" y="-384.5"/>
+            <point key="canvasLocation" x="1747.5" y="-547.5"/>
         </scene>
         <!--个人中心-->
         <scene sceneID="kog-Di-h4W">
